# Project-2A

./: CMakeLists.txt  README.md  package.xml  sigma.xacro  sigma_cell.xacro  sigma_cell__.xacro  sigmacell_bastien.launch
action/: Move.action  Robot.action  move.action  pose.action  test_move.py  ur_robot.action
action_script/: pr_move.py  pr_robot.py  sk_UR_robot.py  test_move.py  test_robot.py
launch/: sigmac.launch  sigmacell.launch
meshs/: cam.stl
rviz/: cell-2.rviz
script/: marker.py  marker_publisher.py  myfile.py  mylaunch.launch  r_publisher.py  test_publish_markerarray.py
src/: bonding.json  lire_json.py  marker_subscriber.py  position_magnet.py
src/ros/: go_to_pos.py  lire_json.py  marker.py  marker_publisher.py  marker_subscriber.py  position_magnet.py
src/ros_action/: marker_server.py  pos_magnet_client.py
support/: CMakeLists.txt  package.xml
support/meshes/: ur3e_frame.stl  ur3e_frame_rack.stl
ur_description/: CMakeLists.txt
worlds/: world.world
